examples/test/testpolicy16948.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16948
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key34: value27
      key19: value15
      key3: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value36
          key16: value37
      podSelector:
        matchLabels:
          key34: value21
          key10: value21
          key14: value8
